syntax = "proto3";

// import "google/protobuf/timestamp.proto";
// import "livongo/protobuf/grpc/external/enrollment/common/question_ids.proto";
// import "livongo/protobuf/common/temp/date.proto";
// import "google/type/date.proto";

package arza;

service ArzaService {
  rpc CreateArza (CreateArzaDto) returns (Arza) {}
  rpc FindAllArza(FindAllDto) returns(Arzalar) {}
  rpc FindOneArza(FindOneArzaDto) returns(Arza) {}
  rpc RemoveArza (FindOneArzaDto) returns (Arza);
}

message Empty {};

message FindAllDto {
  optional string recivedNumber = 1;
  optional string recivedDate = 2;
  optional string applicant = 3;
  optional arzaStatus status = 4;
  int32 page = 5;
  int32 pageSize= 6;
}

message CreateArzaDto {
  string recivedNumber = 1;
  string recivedDate = 2;
  string executorRecivedDate = 3;
  string executedDate = 4;
  string workedDate = 5;
  string applicant = 6;
  string description = 7;
  string result = 8;
  string prosecutorResult = 9;
  string userId = 10;
}

message Arza {
  string id = 1;
  string recivedNumber = 2;
  string recivedDate = 3;
  string executorRecivedDate = 4;
  string executedDate = 5;
  string workedDate = 6;
  string applicant = 7;
  string description = 8;
  string result = 9;
  string prosecutorResult = 10;
  string userId = 11;
}

message Arzalar {
  int32 count = 1;
  repeated Arza rows = 2;
}

message FindOneArzaDto {
  string id = 1;
}

enum arzaStatus {
  newly = 0;
  working = 1;
  delay = 3;
}

